mockiato/tests/ui/malformed_static_attr.stderr
error: #[mockable(static) does not take any parameters
 --> $DIR/malformed_static_attr.rs:3:12
  |
3 | #[mockable(static = 1)]
  |            ^^^^^^
  |
  = help: Example usage: #[mockable(static)]

error: #[mockable(static) does not take any parameters
 --> $DIR/malformed_static_attr.rs:6:12
  |
6 | #[mockable(static = "foo")]
  |            ^^^^^^
  |
  = help: Example usage: #[mockable(static)]

warning: `static` is specified more than once.
 --> $DIR/malformed_static_attr.rs:9:20
  |
9 | #[mockable(static, static)]
  |                    ^^^^^^

error: aborting due to 2 previous errors

